--- a/package.json
+++ b/package.json
@@ -6,20 +6,25 @@
   "scripts": {
     "demo": "tsx src/demo.ts",
     "server": "tsx src/server.ts",
+    "balanced-server": "tsx src/balancedServer.ts",
     "dev": "tsx watch src/demo.ts",
     "dev:server": "tsx watch src/server.ts",
+    "dev:balanced-server": "tsx watch src/balancedServer.ts",
     "build": "tsc",
     "start": "node dist/demo.js",
-    "start:server": "node dist/server.js"
+    "start:server": "node dist/server.js",
+    "start:balanced-server": "node dist/balancedServer.js"
   },
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "ioredis": "^5.3.2"
+    "ioredis": "^5.3.2",
+    "opossum": "^8.1.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.0.0",
+    "@types/opossum": "^8.1.9",
     "tsx": "^4.0.0",
     "typescript": "^5.0.0"
   }
